<?xml version="1.0">
<package format="3">
  <name>sensor_fusion_lite</name>
  <version>0.1.0</version>
  <description>Lightweight ROS2 sensor fusion library and node.</description>

  <maintainer email="yigit.aydin.dev@gmail.com">Yigitcan Aydin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>